# Discord-Bots

./: Output
ForexNewsTracker/: config.py  forex_bot.py  forex_scraper.py  pyproject.toml  utils.py
ForexNewsTracker/attached_assets/: Pasted-import-discord-import-requests-import-asyncio-from-bs4-import-BeautifulSoup-import-datetime-import-l-1739960698246.txt
